✨ feat(favirite counter): fix visibility

--- a/react_frontend/src/PAGES/Home_page/home.page.style.scss
+++ b/react_frontend/src/PAGES/Home_page/home.page.style.scss
@@ -22,7 +22,7 @@
             width: auto;
 
             &--data {
-                display: flex;
+                // display: flex;
                 flex-direction: column;
                 max-width: 320px;
             }
